--- a/pages/spele.html
+++ b/pages/spele.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AI Game</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../library/bootstrap.min.css">
     <link rel="stylesheet" href="../dist/styles/main.css">
 
     <link rel="icon" type="image/png" href="../favicon.png"/>
@@ -173,7 +173,7 @@
 
 
 <!--Import jQuery before export.js-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="../library/jquery-2.1.1.min.js"></script>
 
 <script src="../dist/scripts/main.js"></script>
 </body>
